--- a/style.css
+++ b/style.css
@@ -16,21 +16,28 @@ body {
 }
 
 .contact {
-  background-color: #f3f3f3;
+  background-color: beige;
   padding: 20px;
   width: 400px;
   display: flex;
 }
+
+section:nth-child(2n) {
+  background-color: white;
+}
+
 .photo {
   width: 120px;
   height: 120px;
   border-radius: 50%;
+
 }
 
 .info {
   margin-left: 20px;
   flex-grow: 2;
 }
+
 .info p {
   font-size: 22px;
 }
@@ -48,4 +55,34 @@ body {
   width: 30px;
 }
 
-/* Tady napište své styly */
+.photo {
+  border: solid 3px lightblue;
+}
+
+/* .call:hover {
+  transform: scale(1.3);
+}
+
+.message:hover {
+  transform: scale(1.3);
+}
+
+Tady napište své styly */
+
+
+/*
+Nastyluj ikony, tak aby se při najetí myši ikonka zvětšila.
+Použij pro to vlasnost a hodnotu transform: scale(1.3).
+Na najetí myši také nastavte kurzor na pointer/ručičku.
+Dej pozor, aby se nezvětšovala i fotografie.
+
+div img:hover {
+  transform: scale(1.3);
+  cursor: pointer;*/
+
+/* Bonusový úkol: */
+div img:hover {
+  transform: scale(1.3);
+  cursor: pointer;
+  transition: 0.2s ease-in-out;
+}
